--- a/ibas.importexport.service/.settings/org.eclipse.wst.common.component
+++ b/ibas.importexport.service/.settings/org.eclipse.wst.common.component
@@ -9,5 +9,6 @@
         </dependent-module>
     <property name="java-output-path" value="/ibas.importexport.service/target/classes"/>
         <property name="context-root" value="ibas.importexport.service"/>
+        <property name="component.exclusion.patterns" value="**/*.ts,**/*.bat,**/*.sh,3rdparty/*.txt,3rdparty/ibas/**,3rdparty/openui5/**,3rdparty/trainingtesting/**,test/**"/>
   </wb-module>
 </project-modules>
