--- a/ibas.importexport.service/.settings/org.eclipse.wst.common.component
+++ b/ibas.importexport.service/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,9 @@
         <dependent-module archiveName="ibas.importexport-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ibas.importexport/ibas.importexport">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="ibas.initialfantasy-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ibas.initialfantasy/ibas.initialfantasy">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     <property name="java-output-path" value="/ibas.importexport.service/target/classes"/>
         <property name="context-root" value="ibas.importexport.service"/>
         <property name="component.exclusion.patterns" value="**/*.ts,**/*.bat,**/*.sh,3rdparty/*.txt,3rdparty/ibas/**,3rdparty/openui5/**,3rdparty/trainingtesting/**,test/**"/>
