--- a/ibas.importexport.service/.settings/org.eclipse.wst.common.component
+++ b/ibas.importexport.service/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,9 @@
         <dependent-module archiveName="ibas.importexport-0.1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ibas.importexport/ibas.importexport">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="ibas.importexport.excel-0.1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ibas.importexport.excel/ibas.importexport.excel">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="ibas.initialfantasy-0.1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ibas.initialfantasy/ibas.initialfantasy">
             <dependency-type>uses</dependency-type>
         </dependent-module>
